@@ -49,6 +49,30 @@
     <span class="span">Span 1</span>
     <span class="span">Span 2</span>
     <span class="span">Span 3</span>
+    
+    <table class="table" border='1'>
+      <tr>
+        <td class="td">Data 1</td>
+        <td class="td">Data 2</td>
+        <td class="td">Data 3</td>
+      </tr>
+    </table>
 
+    <table class="table" border='1'>
+      <tr>
+        <td>Data 4</td>
+        <td>Data 5</td>
+        <td>Data 6</td>
+      </tr>
+    </table>
+
+    <table class="table" border='1'>
+      <tr>
+        <td>Data 7</td>
+        <td>Data 8</td>
+        <td>Data 9</td>
+      </tr>
+    </table>
+    
   </body>
 </html>
